Bug 1590135 - Don't call stop in AsyncLogger destructor. r=pehrsons

It does not achieve anything and crashes if the log module manager hasn't been
initialized.

Differential Revision: https://phabricator.services.mozilla.com/D49958